# cpp_sources

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  MAIN.cbp  Makefile  README.md  build.sh  cmake_install.cmake  gam_calc.cpp  get_relivent_snps.cpp  get_relivent_snps.h  get_relivent_snps.out  linkage  outs_raw.tsv  rel_test.tsv
src/: Arg_parser.cpp  Arg_parser.h  IO.cpp  IO.h  get_relivent_snps.cpp  get_relivent_snps.h
